	  priority should be default, not the highest priority (2014-4-19).
	* configs/lpcxpresso-lpc1768: Refreshed all defconfig files (2014-4-19).
	* configs/olimex-lpc1766stk: Refreshed all defconfig files (2014-4-19).
	* configs/zkit-arm-1769: Refreshed all defconfig files (2014-4-19).
	* include/nuttx/binfmt/ieee695.h:  Beginning of header file for IEEE
	  695 OMF header file (2014-4-19).
	* arch/arm/include/stm32/chip.h and src/stm32/Kconfig:  Add support
	  for the STM401RE.  From Frank Bennett (2014-4-20).
	* README.txt, Documentation/README.html, configs/Kconfig and README.txt,
	  configs/nucleo-f401re:  Add support for the Nucleo-F401RE board.  From
	  Frank Bennett (2014-4-20).
	* arch/arm/src/sam34/sam_rtc.c/.h:  Port RTC driver from SAMA5 to
	  SAM3/4.  From Bob Doiron (2014-4-21)
	* arch/arm/src/sam34/sam4s_periphclks.h: Fix error in macros that
	  disable peripheral clocking.  From Bob Doiron (2014-4-21)
	* drivers/mmcsd/mmcsd_sdio.c/.h:  Misc improvements from Bob Doiron
	  (2014-4-21)
	* arch/arm/src/sam34/sam_hsmci.c and chip/sam_hsmci.h:  Extensions
	  from Bob Doiron needed to support PDC-based HSMCI DMA transfers
	  (2014-4-21).
	* configs/sam4s-xplained-pro:  Support for the SAM4S Xplained Pro
	  board from Bob Doiron (2014-4-21).
	* configs/sam4s-xplained-pro: Added card detect (kind of broken
	  still); added proc/vfat mounting during init to save some typing.
	  From Bob Doiron (2014-4-21).
	* configs/sam4s-xplained-pro: Boost PLLA to 240MHz to allow USB. From
	  Bob Doiron (2014-4-21).
	* arch/arm/src/sam34/sam_wdt.c/.h:  Add watchdog driver.  From Bob
	  Doiron (2014-4-21).
	* nuttx/configs/sam4s-xplained-pro:  Add board-specific watchdog
	  timer support.  From Bob Doiron (2014-4-21).
	* drivers/timer.c and include/nuttx/timer.h:  Timer "upper half"
	  driver and lower half interface definition from Bob Doiron
	  (2014-40-22).
	* arch/z16/src/z16f/z16f_espi.c:  Add ZNEO ESPI driver (2014-4-24).
